In lexer, prefer tokens to skipped separator characters
This was causing newlines in go and javascript to be parsed as
meaningless separator characters instead of statement terminators

--- a/spec/runtime/languages/javascript/control_flow.txt
+++ b/spec/runtime/languages/javascript/control_flow.txt
@@ -80,6 +80,16 @@ try {
     (statement_block (expression_statement (function_call (identifier) (identifier))))))
 
 ===========================================
+parses indented code after blocks
+===========================================
+  function x() {}
+  return z;
+---
+(program
+    (expression_statement
+        (function_expression (identifier) (formal_parameters) (statement_block)))
+    (return_statement (identifier)))
+===========================================
 parses switch statements
 ===========================================
 switch(x) {
