--- a/spec/runtime/languages/golang/main.txt
+++ b/spec/runtime/languages/golang/main.txt
@@ -27,3 +27,15 @@ func main() {
     (func_declaration (var_name) (statement_block
         (comment))))
 
+==========================================
+handles indented code after blocks
+=========================================
+package trivial
+
+  func one() {}
+  func two() {}
+---
+(program
+    (package_directive (package_name))
+    (func_declaration (var_name) (statement_block))
+    (func_declaration (var_name) (statement_block)))
