--- a/spec/runtime/languages/golang/expressions.txt
+++ b/spec/runtime/languages/golang/expressions.txt
@@ -10,7 +10,7 @@ func main() {
 ---
 (program
     (package_directive (package_name))
-    (func_declaration (var_name) (statement_block
+    (func_declaration (var_name) (block_statement
         (expression_statement (call_expression (var_name) (string) (number)))
         (expression_statement (call_expression (var_name))))))
 
@@ -25,7 +25,7 @@ func main() {
 ---
 (program
     (package_directive (package_name))
-    (func_declaration (var_name) (statement_block
+    (func_declaration (var_name) (block_statement
         (expression_statement (call_expression
             (selector_expression (var_name) (var_name))
             (selector_expression (var_name) (var_name))
