--- a/spec/runtime/languages/javascript/operators.txt
+++ b/spec/runtime/languages/javascript/operators.txt
@@ -46,4 +46,16 @@ parses the 'in' operator
 ===========================================
 print(x in y)
 ---
-(program (expression_statement (function_call (identifier) (in_expression (identifier) (identifier)))))
+(program (expression_statement (function_call
+    (identifier)
+    (in_expression (identifier) (identifier)))))
+
+============================================
+parses property access and operators
+============================================
+print(x.y.z && a.b.c)
+---
+(program (expression_statement (function_call (identifier)
+    (bool_op
+        (property_access (property_access (identifier) (identifier)) (identifier))
+        (property_access (property_access (identifier) (identifier)) (identifier))))))
