--- a/spec/runtime/languages/javascript/control_flow.txt
+++ b/spec/runtime/languages/javascript/control_flow.txt
@@ -1,5 +1,5 @@
 ==========================================
-parses if statements
+js parses if statements
 ==========================================
 if (isReady()) {
     console.log(theData)
