In lexer, always prefer the longest match
Only use rules' precedence to decide between two tokens
that match the same string

--- a/spec/runtime/languages/javascript/literals.txt
+++ b/spec/runtime/languages/javascript/literals.txt
@@ -81,3 +81,11 @@ var thing = {
                 (comment)
                 (expression_statement (function_call (identifier)))))))))
 
+==========================================
+parses comments within expressions
+==========================================
+y // comment
+  * z;
+---
+(program
+  (expression_statement (math_op (expression (identifier) (comment)) (identifier))))
