--- a/spec/runtime/languages/arithmetic/errors.txt
+++ b/spec/runtime/languages/arithmetic/errors.txt
@@ -3,7 +3,7 @@ recovers from errors at the top level
 =====================================================
 x * * y
 ---
-(ERROR '*')
+(expression (variable) (ERROR '*'))
 
 =====================================================
 recovers from errors inside parenthesized expressions
