Don't store tree's hidden children in a separate array
Just mark hidden trees as such, and skip them when
pretty-printing a tree

--- a/spec/runtime/languages/arithmetic/errors.txt
+++ b/spec/runtime/languages/arithmetic/errors.txt
@@ -10,6 +10,6 @@ recovers from errors inside parenthesized expressions
 =====================================================
 x + (y * + z) * 5
 ---
-(expression (sum
+(sum
     (variable)
-    (product (group (ERROR '+')) (number))))
+    (product (group (ERROR '+')) (number)))
