--- a/spec/runtime/languages/json/errors.txt
+++ b/spec/runtime/languages/json/errors.txt
@@ -3,7 +3,7 @@ recovers from top-level errors
 ==========================================
 [}
 ---
-(value (ERROR <EOF>) (ERROR '}'))
+(ERROR '}')
 
 ==========================================
 recovers from unexpected tokens
