Avoid building incomplete error nodes during lexing
The lexer doesn't know the expected symbols, so it doesn't have enough
information to construct error nodes. Now, when it encounters an invalid
character, it returns NULL and the parser builds a correct error node.

--- a/spec/runtime/languages/json/errors.txt
+++ b/spec/runtime/languages/json/errors.txt
@@ -3,7 +3,7 @@ recovers from top-level errors
 ==========================================
 [}
 ---
-(ERROR <EOF>) (ERROR '}')
+(ERROR '}') (ERROR '}')
 
 ==========================================
 recovers from unexpected tokens
@@ -19,7 +19,7 @@ recovers from errors inside arrays
 ---
 (array
     (number)
-    (ERROR <EOF>)
+    (ERROR ',')
     (number))
 
 ==========================================
