Remove the separator characters construct
Now, grammars can handle whitespace by making it another ubiquitous
token, like comments.

For now, this has the side effect of whitespace being included in the
tree that precedes it. This was already an issue for other ubiquitous
tokens though, so it needs to be fixed anyway.

--- a/spec/runtime/languages/arithmetic/errors.txt
+++ b/spec/runtime/languages/arithmetic/errors.txt
@@ -3,7 +3,7 @@ recovers from errors at the top level
 =====================================================
 x * * y
 ---
-(variable) (ERROR '*')
+(expression (variable)) (ERROR '*')
 
 =====================================================
 recovers from errors inside parenthesized expressions
@@ -11,5 +11,5 @@ recovers from errors inside parenthesized expressions
 x + (y * + z) * 5
 ---
 (sum
-    (variable)
-    (product (group (ERROR '+')) (number)))
+    (expression (variable))
+    (product (group (ERROR '+')) (expression (number))))
